# tikzify

./: .editorconfig  .gitignore  LICENSE  README.rst  pyproject.toml  setup.cfg
examples/: basal_ganglia.py  edge_colors.py
examples/figures/: readme.txt
examples/latex/: color_macros.tex  commands.tex  includes.tex
examples/tikz/: base.tex  cma_tips.tex  cmm_tips.tex  color_macros.tex  extra_tips.tex  flow_style.tex
tikzify/: __init__.py
tikzify/_src/foundation/: context.py  contexts.py  elements.py  formatter.py  function.py  pf.py
tikzify/_src/function_graph/: annotation.py  curve_generator.py  draw.py  graph.py  legend.py  multi_graph.py  trait.py
tikzify/_src/function_graph/curve_source/: curve_source.py  function.py  trajectory.py
tikzify/_src/node_graph/: anchor.py  constraints.py  edge.py  graph.py  multi_edge.py  node.py  tips.py  tools.py
tikzify/foundation/: __init__.py  contexts.py  formatter.py  pf.py
tikzify/function_graph/: __init__.py  annotation.py  curve_generator.py  draw.py  graph.py  legend.py  multi_graph.py  trait.py
tikzify/function_graph/curve_source/: __init__.py  curve_source.py  function.py  trajectory.py
tikzify/node_graph/: __init__.py  anchor.py  constraints.py  edge.py  graph.py  multi_edge.py  node.py  tools.py
