[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "lefthook>=2",
  "pyright>=1.1.408",
  "ruff>=0.15",
  "toml-sort>=0.24",
  "ty>=0.0.22"
]

[project]
name = "tikzify"
version = "2.0.0"
description = "Utilities for programmatically generating TikZ code."
readme = "README.rst"
requires-python = ">=3.12, <3.15"
license = "Apache-2.0"
authors = [{email = "mistersheik@gmail.com"}, {name = "Neil Girdhar"}]
maintainers = [{email = "mistersheik@gmail.com"}, {name = "Neil Girdhar"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "more_itertools>=10",
  "networkx>=3.1",
  "numpy>=2.0",
  "rectangle>=0.5.1",
  "scipy-stubs>=1.15",
  "scipy>=1.11"
]

[project.urls]
source = "https://github.com/NeilGirdhar/tikzify"

[tool.pyright]
include = ["tikzify", "examples"]
stubPath = ""
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportMissingTypeArgument = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "ARG001", # Unused function argument.
  "ARG002", # Unused method argument.
  "ARG003", # Unused class method argument.
  "ARG004", # Unused static method argument.
  "COM812", # Trailing comma missing.
  "CPY001", # Missing copyright.
  "D100", # Missing docstring in public module.
  "D101", # Missing docstring in public class.
  "D102", # Missing docstring in public method.
  "D103", # Missing docstring in public function.
  "D104", # Missing docstring in public package.
  "D105", # Missing docstring in magic method.
  "D107", # Missing docstring in __init__.
  "DOC201", # return is not documented in docstring.
  "DOC202", # Docstring should not have a returns section because the function doesn"t return anything.
  "DOC402", # DOC402 `yield` is not documented in docstring.
  "DOC501", # Raised exception `ValueError` missing from docstring.
  "ERA001", # Commented-out code.
  "FIX002", # Line contains TODO, consider resolving the issue.
  "G004", # Logging statement uses f-string.
  "I001", # Import block is un-sorted or un-formatted.
  "PD008", # Use .loc instead of .at. If speed is important, use NumPy.
  "PGH003", # Use specific rule codes when ignoring type issues.
  "PLR0913", # Too many arguments in function definition.
  "PLR6301", # Method doesn"t use self.
  "Q000", # Single quotes found but double quotes preferred.
  "RUF021", # Parenthesize `a and b` expressions when chaining `and` and `or` together...
  "RUF069", # Equality comparison with floats.
  "S101", # Assert used.
  "TC001", # Move application import into a type-checking block.
  "TC002", # Move third-party import into a type-checking block.
  "TC003", # Move standard library import into a type-checking block.
  "TD002", # Missing author in TODO; try: # TODO(<author_name>): ....
  "TD003", # Missing issue link on the line following this TODO.
  "TID252" # Relative imports from parent modules are banned.
]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 40

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"array_api_extra" = "xpx"
"ctypes" = "ct"
"datetime" = "dt"
"equinox" = "eqx"
"itertools" = "it"
"jax.numpy" = "jnp"
"jax.random" = "jr"
"jax.scipy.special" = "jss"
"networkx" = "nx"
"numpy.typing" = "npt"
"optimistix" = "optx"
"optype" = "op"
"optype.numpy" = "onp"
"optype.numpy.compat" = "npc"
"optype.typing" = "opt"
"pyqtgraph" = "pg"
"scipy.special" = "sc"
"seaborn" = "sns"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
