[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "jupyter>=1.1.1",
  "lefthook>=2",
  "pyright>=1.1.408",
  "ruff>=0.15",
  "toml-sort>=0.24",
  "ty>=0.0.22"
]

[project]
name = "tikzify"
version = "2.0.0"
description = "Utilities for programmatically generating TikZ code."
readme = "README.rst"
requires-python = ">=3.12, <3.15"
license = "Apache-2.0"
authors = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
maintainers = [{name = "Neil Girdhar", email = "mistersheik@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "more_itertools>=10",
  "networkx>=3.1",
  "numpy>=2.0",
  "rectangle>=0.5.1",
  "scipy-stubs>=1.15",
  "scipy>=1.11"
]

[project.urls]
source = "https://github.com/NeilGirdhar/tikzify"

[tool.pyright]
include = ["tikzify", "examples"]
stubPath = ""
venvPath = "."
venv = ".venv"
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportMissingTypeArgument = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
  "ARG001", # Unused function arg.
  "ARG002", # Unused method arg.
  "ARG003", # Unused class method arg.
  "ARG004", # Unused static method arg.
  "COM812", # Missing trailing comma.
  "CPY001", # Missing copyright notice.
  "D100", # Missing module docstring.
  "D101", # Missing class docstring.
  "D102", # Missing method docstring.
  "D103", # Missing function docstring.
  "D105", # Missing magic method docstring.
  "D107", # Missing __init__ docstring.
  "DOC201", # Missing return doc.
  "DOC202", # Extraneous returns section.
  "DOC402", # Missing yield doc.
  "DOC501", # Missing raised exception doc.
  "ERA001", # Commented-out code.
  "FIX002", # TODO comment.
  "G004", # Logging uses f-string.
  "PD008", # Prefer .loc over .at.
  "PGH003", # Use specific type-ignore codes.
  "PLR0913", # Too many function arguments.
  "PLR6301", # Method does not use self.
  "Q000", # Prefer double quotes.
  "RUF002", # Ambiguous Unicode character.
  "RUF021", # Parenthesize mixed and/or.
  "RUF069", # Float equality comparison.
  "S101", # Assert used.
  "TC001", # Move app import into TYPE_CHECKING.
  "TC002", # Move third-party import into TYPE_CHECKING.
  "TC003", # Move stdlib import into TYPE_CHECKING.
  "TD002", # TODO missing author.
  "TD003" # TODO missing issue link.
]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 40

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"array_api_extra" = "xpx"
"ctypes" = "ct"
"datetime" = "dt"
"equinox" = "eqx"
"itertools" = "it"
"jax.numpy" = "jnp"
"jax.random" = "jr"
"jax.scipy.special" = "jss"
"networkx" = "nx"
"numpy.typing" = "npt"
"optimistix" = "optx"
"optype" = "op"
"optype.numpy" = "onp"
"optype.numpy.compat" = "npc"
"optype.typing" = "opt"
"pyqtgraph" = "pg"
"scipy.special" = "sc"
"seaborn" = "sns"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8
